Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_ctx_ringsize@active@vcs* - incomplete - BUG: kernel NULL pointer dereference, address: 000000000000002d
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5470/shard-iclb2/igt@gem_ctx_ringsize@active@vcs1.html
<1> [313.408922] BUG: kernel NULL pointer dereference, address: 000000000000002d
<1> [313.408930] #PF: supervisor read access in kernel mode
<1> [313.408935] #PF: error_code(0x0000) - not-present page
<6> [313.408940] PGD 0 P4D 0
<4> [313.408944] Oops: 0000 [#1] PREEMPT SMP NOPTI
<4> [313.408963] CPU: 6 PID: 1311 Comm: gem_ctx_ringsiz Tainted: G U 5.6.0-rc3-CI-CI_DRM_8008+ #1
<4> [313.408972] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.3234.A01.1906141750 06/14/2019
<4> [313.409062] RIP: 0010:enable_signaling+0x84/0x240 [i915]
<4> [313.409068] Code: ff ff ff ff 48 8b 45 d0 48 8b 18 e8 a6 11 e6 e0 85 c0 74 0d 80 3d b0 c0 22 00 00 0f 84 fc 00 00 00 48 85 db 0f 84 24 01 00 00 <8b> 4b 38 4c 8d 7b 38 85 c9 74 cf 8d 51 01 89 c8 f0 0f b1 53 38 89
<4> [313.409083] RSP: 0018:ffffc900004dfbe8 EFLAGS: 00010286
<4> [313.409089] RAX: 0000000000000001 RBX: fffffffffffffff5 RCX: 00000000ffffffff
<4> [313.409095] RDX: 0000000000000000 RSI: ffffffff82649d60 RDI: ffff888496154920
<4> [313.409102] RBP: ffffc900004dfc18 R08: 0000000000000000 R09: 0000000000000001
<4> [313.409108] R10: 00000000b9a9ec1d R11: 000000000555d7a5 R12: 00000000ffffffff
<4> [313.409115] R13: ffffffffa0442fc8 R14: ffff8884883cad68 R15: ffff88847231b400
<4> [313.409121] FS: 00007fd97eeba300(0000) GS:ffff8884a0100000(0000) knlGS:0000000000000000
<4> [313.409129] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [313.409135] CR2: 000000000000002d CR3: 000000048960c002 CR4: 0000000000760ee0
<4> [313.409141] PKRU: 55555554
<4> [313.409145] Call Trace:
<4> [313.409189] ? dma_resv_unlock+0x80/0x80 [i915]
<4> [313.409241] i915_active_wait+0xe2/0x1e0 [i915]
<4> [313.409248] ? __mutex_unlock_slowpath+0x3e/0x2a0
<4> [313.409291] ? dma_resv_unlock+0x80/0x80 [i915]
<4> [313.409327] intel_context_set_ring_size+0x2d/0xb0 [i915]
<4> [313.409371] ? dma_resv_unlock+0x80/0x80 [i915]
<4> [313.409413] context_apply_all+0x8b/0x130 [i915]
<4> [313.409455] ? i915_gem_context_getparam_ioctl+0xca0/0xca0 [i915]
<4> [313.409504] ctx_setparam+0x35a/0xf80 [i915]
<4> [313.409510] ? find_held_lock+0x2d/0x90
<4> [313.409550] ? i915_gem_context_setparam_ioctl+0xc0/0x1e0 [i915]
<4> [313.409591] ? i915_gem_context_getparam_ioctl+0xca0/0xca0 [i915]
<4> [313.409634] i915_gem_context_setparam_ioctl+0xef/0x1e0 [i915]
<4> [313.409642] drm_ioctl_kernel+0xad/0xf0
<4> [313.409648] drm_ioctl+0x2e1/0x390
<4> [313.409688] ? i915_gem_context_getparam_ioctl+0xca0/0xca0 [i915]
<4> [313.409699] ksys_ioctl+0x7b/0x90
<4> [313.409704] __x64_sys_ioctl+0x11/0x20
<4> [313.409709] do_syscall_64+0x4f/0x220
<4> [313.409715] entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [313.409720] RIP: 0033:0x7fd97e33b5d7
<4> [313.409725] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [313.409740] RSP: 002b:00007ffca22d1598 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [313.409748] RAX: ffffffffffffffda RBX: 00000000000b040c RCX: 00007fd97e33b5d7
<4> [313.409757] RDX: 00007ffca22d1670 RSI: 00000000c0186475 RDI: 0000000000000005
<4> [313.409766] RBP: 00007ffca22d1670 R08: 0000000000000000 R09: 0000000000000017
<4> [313.409779] R10: 00000000ffffffe9 R11: 0000000000000246 R12: 00000000c0186475
<4> [313.409788] R13: 0000000000000005 R14: 00007ffca22d16d0 R15: 0000000000000001
<4> [313.409800] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915 mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul snd_hda_intel snd_intel_dspcfg snd_hda_codec ghash_clmulni_intel snd_hwdep e1000e snd_hda_core cdc_ether usbnet mii snd_pcm ptp pps_core mei_me mei intel_lpss_pci prime_numbers
<4> [313.409855] CR2: 000000000000002d
<4> [313.409862] ---[ end trace 35e302ecac45add4 ]---
<4> [313.676284] RIP: 0010:enable_signaling+0x84/0x240 [i915]
<4> [313.676293] Code: ff ff ff ff 48 8b 45 d0 48 8b 18 e8 a6 11 e6 e0 85 c0 74 0d 80 3d b0 c0 22 00 00 0f 84 fc 00 00 00 48 85 db 0f 84 24 01 00 00 <8b> 4b 38 4c 8d 7b 38 85 c9 74 cf 8d 51 01 89 c8 f0 0f b1 53 38 89
<4> [313.676307] RSP: 0018:ffffc900004dfbe8 EFLAGS: 00010286
<4> [313.676312] RAX: 0000000000000001 RBX: fffffffffffffff5 RCX: 00000000ffffffff
<4> [313.676318] RDX: 0000000000000000 RSI: ffffffff82649d60 RDI: ffff888496154920
<4> [313.676324] RBP: ffffc900004dfc18 R08: 0000000000000000 R09: 0000000000000001
<4> [313.676330] R10: 00000000b9a9ec1d R11: 000000000555d7a5 R12: 00000000ffffffff
<4> [313.676335] R13: ffffffffa0442fc8 R14: ffff8884883cad68 R15: ffff88847231b400
<4> [313.676341] FS: 00007fd97eeba300(0000) GS:ffff8884a0100000(0000) knlGS:0000000000000000
<4> [313.676348] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [313.676353] CR2: 000000000000002d CR3: 000000048960c002 CR4: 0000000000760ee0
<4> [313.676359] PKRU: 55555554
<3> [313.676363] BUG: sleeping function called from invalid context at ./include/linux/percpu-rwsem.h:38
<3> [313.676371] in_atomic(): 0, irqs_disabled(): 1, non_block: 0, pid: 1311, name: gem_ctx_ringsiz
<4> [313.676378] INFO: lockdep is turned off.
<4> [313.676381] irq event stamp: 2571210
<4> [313.676388] hardirqs last enabled at (2571209): [<ffffffff81a394e7>] _raw_spin_unlock_irqrestore+0x47/0x60
<4> [313.676397] hardirqs last disabled at (2571210): [<ffffffff81001d80>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [313.676405] softirqs last enabled at (2571020): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4> [313.676413] softirqs last disabled at (2571007): [<ffffffff810babaa>] irq_exit+0xba/0xc0
<3> [313.676420] Preemption disabled at:
<4> [313.676422] [<ffffffff8113077b>] wake_up_klogd+0xb/0x60
<4> [313.676431] CPU: 6 PID: 1311 Comm: gem_ctx_ringsiz Tainted: G UD 5.6.0-rc3-CI-CI_DRM_8008+ #1
<4> [313.676438] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.3234.A01.1906141750 06/14/2019
<4> [313.676448] Call Trace:
<4> [313.676454] dump_stack+0x71/0x9b
<4> [313.676460] ___might_sleep+0x178/0x260
<4> [313.676465] exit_signals+0x2b/0x350
<4> [313.676470] do_exit+0xa3/0xd50
<4> [313.676475] ? ksys_ioctl+0x7b/0x90
<4> [313.676480] rewind_stack_do_exit+0x17/0x20
<4> [313.681685] ------------[ cut here ]------------
<4> [313.681694] WARNING: CPU: 0 PID: 1311 at kernel/rcu/tree_plugin.h:293 rcu_note_context_switch+0x87/0x650
<4> [313.681701] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915 mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul snd_hda_intel snd_intel_dspcfg snd_hda_codec ghash_clmulni_intel snd_hwdep e1000e snd_hda_core cdc_ether usbnet mii snd_pcm ptp pps_core mei_me mei intel_lpss_pci prime_numbers
<4> [313.681806] CPU: 0 PID: 1311 Comm: gem_ctx_ringsiz Tainted: G UD W 5.6.0-rc3-CI-CI_DRM_8008+ #1
<4> [313.681813] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.3234.A01.1906141750 06/14/2019
<4> [313.681824] RIP: 0010:rcu_note_context_switch+0x87/0x650
<4> [313.681829] Code: 00 7f 01 00 8b b8 8c 08 00 00 85 ff 0f 84 c3 01 00 00 45 84 ed 75 15 65 48 8b 04 25 00 7f 01 00 8b 88 80 03 00 00 85 c9 7e 02 <0f> 0b 65 48 8b 04 25 00 7f 01 00 8b 90 80 03 00 00 85 d2 7e 0f 41
<4> [313.681843] RSP: 0018:ffffc900004df9d8 EFLAGS: 00010002
<4> [313.681848] RAX: ffff888496154040 RBX: ffff88849fe3c680 RCX: 0000000000000001
<4> [313.681854] RDX: 0000000000000002 RSI: 0000000000000000 RDI: 0000000000000000
<4> [313.681859] RBP: ffffc900004dfa70 R08: 0000000000000000 R09: 0000000000000000
<4> [313.681952] R10: ffffc900004dfa90 R11: 0000000000000000 R12: ffff888496154040
<4> [313.681958] R13: 0000000000000000 R14: ffff88849fe3b958 R15: 00000000ffffffff
<4> [313.681964] FS: 00007fd97eeba300(0000) GS:ffff88849fe00000(0000) knlGS:0000000000000000
<4> [313.681972] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [313.681976] CR2: 0000561f4de027a8 CR3: 0000000005610003 CR4: 0000000000760ef0
<4> [313.681982] PKRU: 55555554
<4> [313.681985] Call Trace:
<4> [313.681991] __schedule+0xd0/0x800
<4> [313.682085] schedule+0x37/0xe0
<4> [313.682089] schedule_timeout+0x1cc/0x3f0
<4> [313.682094] ? __next_timer_interrupt+0xc0/0xc0
<4> [313.682100] ? wait_for_completion_timeout+0x115/0x1a0
<4> [313.682105] wait_for_completion_timeout+0x13d/0x1a0
<4> [313.682111] ? wake_up_q+0xa0/0xa0
<4> [313.682117] drm_atomic_helper_wait_for_flip_done+0x64/0xb0
<4> [313.682261] intel_atomic_commit_tail+0x329/0x1490 [i915]
<4> [313.682394] ? intel_atomic_commit_ready+0x3f/0x48 [i915]
<4> [313.682497] ? __i915_sw_fence_complete+0x1a0/0x250 [i915]
<4> [313.682539] intel_atomic_commit+0x312/0x390 [i915]
<4> [313.682546] drm_client_modeset_commit_atomic+0x1e7/0x250
<4> [313.682554] drm_client_modeset_commit_locked+0x3f/0x1a0
<4> [313.682650] drm_client_modeset_commit+0x1c/0x40
<4> [313.682656] drm_fb_helper_restore_fbdev_mode_unlocked+0x42/0x90
<4> [313.682786] intel_fbdev_restore_mode+0x2b/0x60 [i915]
<4> [313.682791] drm_lastclose+0x2a/0x50
<4> [313.682795] drm_release_noglobal+0x35/0x50
<4> [313.682801] __fput+0xbf/0x250
<4> [313.682806] task_work_run+0x82/0xb0
<4> [313.682811] do_exit+0x3af/0xd50
<4> [313.682815] ? ksys_ioctl+0x7b/0x90
<4> [313.682821] rewind_stack_do_exit+0x17/0x20
<4> [313.682827] irq event stamp: 2571210
<4> [313.682921] hardirqs last enabled at (2571209): [<ffffffff81a394e7>] _raw_spin_unlock_irqrestore+0x47/0x60
<4> [313.682929] hardirqs last disabled at (2571210): [<ffffffff81001d80>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [313.682938] softirqs last enabled at (2571020): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4> [313.682945] softirqs last disabled at (2571007): [<ffffffff810babaa>] irq_exit+0xba/0xc0
<4> [313.682952] ---[ end trace 35e302ecac45add5 ]---